# ds

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
DHT/: .gitignore
DHT/src/: DHTNode.cpp  DHTNode.h
DHT/src/proto/: dht.proto
core/: .gitignore  CMakeLists.txt  conanfile.txt  docker-compose.yml  gen.sh
core/DHT/: CMakeLists.txt  README.md  protogen.sh
core/raft_node/: .gitignore  CMakeLists.txt  README.md  protogen.sh
core/raft_node/src/: ITimerStrategy.h  RaftNode.cpp  RaftNode.h  TimerDelegate.cpp  TimerDelegate.h
core/raft_node/src/proto/: raftnode.proto
core/raft_node/test/: RaftNodeTest.cpp
include/: cli.h  network_manager.h  peer.h
raft_node/: CMakeLists.txt  README.md  protogen.sh
raft_node/src/: ITimerStrategy.h  RaftNode.cpp
raft_node/src/proto/: raftnode.proto
src/: cli.cpp  main.cpp  network_manager.cpp  peer.cpp
